--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react-images": "^1.1.0-beta.3",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
